--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -2,68 +2,105 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <meta name="description" content="">
+        <meta name="author" content="AndrewZaharovskyi">
 
-    <title>{%  block title %}{% endblock %} &ndash; Blog</title>
+        <title>{%  block title %}{% endblock %} &ndash; Blog</title>
 
-    <!-- Bootstrap core CSS -->
+        <!-- Bootstrap core CSS -->
+            <link href="{% static 'Blog/style.css' %}" rel="stylesheet">
+            {#<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/journal/bootstrap.min.css" rel="stylesheet">#}
+            <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/darkly/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Custom styles for this template -->
         <link href="{% static 'Blog/style.css' %}" rel="stylesheet">
-        {#<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/journal/bootstrap.min.css" rel="stylesheet">#}
-        <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/darkly/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="{% static 'Blog/style.css' %}" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head>
 
 
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="{% url 'home' %}">Blog IT and Python</a>
-        </div>
+    <body>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
 
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'about' %}">About</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+                    <a class="navbar-brand" href="{% url 'home' %}">
+                        <div class="row">
+                            <img src="{% static 'Blog/ITandPython.png' %}" style="margin-top: -10px; max-width: 40px; max-height: 40px;" alt="IT and Python">
+                        </div>
+                    </a>
+                </div>
 
-    <div class="container main-content">
-        {% block content %}
-        {%  endblock %}
-    </div><!-- /.container -->
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="{% url 'home' %}">Home</a></li>
+                        <li><a href="{% url 'about' %}">About</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right" style=" margin-top: 7px;">
+                        {% if username %}
+                            <!-- <li><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span></li> -->
+                            <button type="button" class="btn btn-default" aria-label="Left Align">
+                                <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+                                <a href="/auth/logout/">Log Out &nbsp;&nbsp;&nbsp; {{ first_name }}</a>
+                            </button>
+                        {% else%}
+                            <!-- <li><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></li> -->
+                            <button type="button" class="btn btn-default" aria-label="Left Align">
+                                <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
+                                <a href="/auth/login/">Log In {{ username }}</a>
+                            </button>
+                        {% endif %}
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </nav>
 
+        <div class="container main-content">
+            {% block content %}
+            {% endblock %}
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+            {% block login %}
+            {% endblock %}
 
-    <div class="footer-signature">
-        <p>&copy; avz, 2015</p>
-    </div><!-- footer signatures -->
-  </body>
+            <div class="row" align="right">
+                <div class="col col-xs-8 col-sm-8"></div>
+                <div class="col col-xs-3 col-sm-3">
+                    <a href="https://twitter.com/a7v7z">
+                        <span class="label label-info">Look at Twitter</span>
+                    </a>
+                    <a href="https://plus.google.com/u/0/+%D0%90%D0%BD%D0%B4%D1%80%D1%96%D0%B9%D0%97%D0%B0%D0%B3%D0%B0%D1%80%D0%BE%D0%B2%D1%81%D1%8C%D0%BA%D0%B8%D0%B9/posts">
+                        <span class="label label-danger">Look at Google+</span>
+                    </a>
+                </div>
+                <div class="col col-xs-1 col-sm-1"></div>
+            </div>
+
+            <div class="row"><br></div>
+        </div><!-- /.container -->
+
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+        <div class="footer-signature">
+            <p>&copy; avz, 2015</p>
+        </div><!-- footer signatures -->
+    </body>
 </html>
