--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -1,16 +1,81 @@
 {% extends 'Blog/base.html' %}
+{% load staticfiles %}
 
 {% block title %}
-Home
+    Home
 {% endblock %}
 
 {% block content %}
-
     <h1>Home</h1>
+    <div class="container-fluid">
+        {% for article in articles %}
+            <div class="row">
+                <div class="col-xs-1 col-sm-1"></div>
+                <div class="col-xs-10 col-sm-10">
+                    <h4><a href="{% url 'article' article.id %}"> {{ article.article_title }}</a></h4>
+                </div>
+                <div class="col-xs-1 col-sm-1"></div>
+            </div>
 
-    {% for article in articles %}
-        <h4><a href="{% url 'article' article.id %}"> {{ article.article_title }}</a></h4>
-        <pre>{{ article.get_short_text }}</pre>
-    {% endfor %}
+            <div class="row">
+                <div class="col-xs-1 col-sm-1"></div>
+                <div class="col-xs-10 col-sm-10">
+                    <h6 style="font-style: italic">Published: {{ article.article_date }}</h6>
+                </div>
+                <div class="col-xs-1 col-sm-1"></div>
+            </div>
 
+            <div class="row">
+                <div class="col-xs-1 col-sm-1"></div>
+                <div class="col-xs-10 col-sm-10">
+                    <pre class="text-justify">{{ article.get_short_text }}</pre>
+                </div>
+                <div class="col-xs-1 col-sm-1"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-1 col-sm-1"></div>
+                <div class="col-xs-10 col-sm-10">
+                    <p>
+                        <a href="/articles/add_like/{{ article.id}}/">
+                            <img src="{% static 'Blog/img_Like.png' %}" title="Like this" width="25px" height="24px">: {{ article.article_likes }}
+                        </a>
+                    </p>
+                    <hr>
+                </div>
+                <div class="col-xs-1 col-sm-1"></div>
+            </div>
+        {% endfor %}
+
+
+        <div class="row">
+            <div class='col col-xs-3 col-sm-3'></div>
+            <div class="col col-xs-6 col-sm-6" align="center">
+                <nav>
+                    <ul class='pagination pagination-sm'>
+                        {% if articles.has_previous %}
+                            <li><a href="/page/{{ articles.previous_page_number }}/"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+                        {% else %}
+                            <li class='disabled'><a href="">&laquo;</a></li>
+                        {% endif %}
+
+                        {% for page in articles.paginator.page_range %}
+                            {% if page == articles.number %}
+                                <li class='active'><a href="/page/{{ page }}/">{{ page }}</a></li>
+                            {% else %}
+                                <li><a href="/page/{{ page }}/">{{ page }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+
+                        {% if articles.has_next %}
+                            <li><a href="/page/{{ articles.next_page_number }}/"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+                        {% else %}
+                            <li class='disabled'><a href="">&raquo;</a></li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            <div class='col col-xs-3 col-sm-3'></div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
